--- a/src/components/PasswordInput/PasswordInput.scss
+++ b/src/components/PasswordInput/PasswordInput.scss
@@ -2,7 +2,7 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
-   background: #F7F9FB;
+   background: #E8F0FE;
    border: 2px solid #EDF2F8;
    box-sizing: border-box;
    border-radius: 7px;
