--- a/src/components/PhoneNumberInput/PhoneNumberInput.scss
+++ b/src/components/PhoneNumberInput/PhoneNumberInput.scss
@@ -5,7 +5,7 @@
    border: 2px solid #EDF2F8;
    box-sizing: border-box;
    border-radius: 4px;
-   background: #F7F9FB;
+   background: #E8F0FE;
    margin: 10px 0;
    transition: all ease 0.5 !important;
    
