--- a/src/containers/Forms/TeacherAdd/TeacherAdd.scss
+++ b/src/containers/Forms/TeacherAdd/TeacherAdd.scss
@@ -75,7 +75,7 @@
          margin-bottom: 25px;
 
          input {
-            background: #F7F9FB;
+            background:transparent;
             border: 2px solid #EDF2F8;
             box-sizing: border-box;
             border-radius: 7px;
