--- a/src/components/NavbarComponents/NavbarPlusLinks/NavbarPlusLinks.scss
+++ b/src/components/NavbarComponents/NavbarPlusLinks/NavbarPlusLinks.scss
@@ -2,13 +2,16 @@
    
 
    .moliya_link {
+      width: max-content;
       font-style: normal;
       font-weight: 500;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 26px;
       color: #000000;
       margin-bottom: 21px;
       text-decoration: none;
+
+      
    }
 }
    
