--- a/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 25px;
+    padding-bottom: 24px;
     border-bottom: 1px solid #000000;
 }
 .izma__courses__form-bolim-form .ant-input {
@@ -29,13 +29,13 @@
 .izma__courses__form-bolim-form-heading {
     font-style: normal;
     font-weight: 600;
-    font-size: 28px;
-    line-height: 35px;
+    font-size: 17px;
     color: #000000;
+    margin-bottom: 0;
 }
 .izma__courses__form-bolim-form-img {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .izma__courses__form-bolim-form-close-btn {
