--- a/src/containers/Forms/StudentAdd/StudentAdd.scss
+++ b/src/containers/Forms/StudentAdd/StudentAdd.scss
@@ -160,7 +160,7 @@ input[type=text] {
    .date__picker,
    .ant-picker {
       background: #F7F9FB;
-      border: 2px solid #EDF2F8;
+      border: 2px solid #C9D5E4;
       box-sizing: border-box;
       border-radius: 7px;
    }
