--- a/src/components/HomeComponents/HomeAcordion/HomeAcordion.scss
+++ b/src/components/HomeComponents/HomeAcordion/HomeAcordion.scss
@@ -54,10 +54,23 @@
       height: 0px;
       min-height: 0;
       overflow: hidden;
-      max-height:100px;
       &.active {
+         max-height:100px;
+         max-height: 300px;
+         overflow-y: scroll;
          min-height: 50px;
          height: auto;
+         &::-webkit-scrollbar {
+            width: 10px;
+         }
+
+         &::-webkit-scrollbar-track {
+            background: #fff;
+         }
+
+         &::-webkit-scrollbar-thumb {
+            background: #090761;
+         }
       }
       p {
          font-style: normal;
