--- a/src/components/PasswordInput/PasswordInput.scss
+++ b/src/components/PasswordInput/PasswordInput.scss
@@ -2,11 +2,17 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
-   background: #E8F0FE;
-   border: 2px solid #EDF2F8;
+   background: #F7F9FB;
    box-sizing: border-box;
    border-radius: 7px;
    width: 100%;
+   border: 2px solid #C9D5E4;
+   transition: all ease 0.5s;
+
+   &:hover {
+      transition: all ease 0.5;
+      border: 2px solid #40a9ff;
+   }
    padding: 0  10px;
 
    input.inputPassword {
@@ -17,6 +23,9 @@
       border-radius: 7px;
       width: 100%;
       padding: 10px;
+
+      outline: none;
+      
    }
 
    span {
