--- a/src/pages/Groups/containers/GroupProfilLeft/GroupProfilLeft.scss
+++ b/src/pages/Groups/containers/GroupProfilLeft/GroupProfilLeft.scss
@@ -275,6 +275,17 @@
    outline: none;
 }
 
+.izma__groups-attendance-left-bottom-button-add {
+   border: none;
+   background: none;
+   width: 23.5px;
+   height: 23.5px;
+   background-image: url('../../../../assets/user.png');
+   background-size: contain;
+   background-repeat: no-repeat;
+   outline: none;
+}
+
 .izma__groups-inner-tabs {
    width: 100%;
 
