--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -48,6 +48,55 @@
 
          
       }
+      .settingsHashRooms {
+         display: flex;
+         align-items: center;
+         padding: 16px;
+         text-align: start;
+         box-sizing: border-box;
+         font-style: normal;
+         font-weight: bold;
+         font-size: 16px;
+         line-height: 24px;
+         text-transform: capitalize;
+         color: #2F2D51;
+         margin-bottom: 0 !important;
+
+         a {
+            color: #2F2D51;
+         }
+
+         &:nth-child(1) {
+            width: 5%;
+         }
+
+         &:nth-child(2) {
+            width: 70%;
+
+         }
+
+         &:nth-child(3) {
+            width: 10%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+
+            
+
+         }
+
+         &:nth-child(4) {
+            width: 10%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+
+         }
+
+         
+      }
 
 
 
@@ -95,6 +144,137 @@
 
          &:nth-child(6) {
             width: 8.9%;
+
+         }
+      }
+      .paymentHistory {
+         display: flex;
+         align-items: center;
+         padding: 16px;
+         text-align: start;
+         box-sizing: border-box;
+         font-style: normal;
+         font-weight: bold;
+         font-size: 16px;
+         line-height: 24px;
+         text-transform: capitalize;
+         color: #2F2D51;
+         margin-bottom: 0 !important;
+
+         a {
+            color: #2F2D51;
+         }
+
+         &:nth-child(1) {
+            width: 28%;
+         }
+
+         &:nth-child(2) {
+            width: 10%;
+
+         }
+
+         &:nth-child(3) {
+            width: 25%;
+
+         }
+
+         &:nth-child(4) {
+            width: 15%;
+
+         }
+
+         &:nth-child(5) {
+            width: 10%;
+
+         }
+
+         &:nth-child(6) {
+            width: 10%;
+
+         }
+      }
+
+
+      .financeGroupHash {
+         display: flex;
+         align-items: center;
+         padding: 16px;
+         text-align: start;
+         box-sizing: border-box;
+         font-style: normal;
+         font-weight: bold;
+         font-size: 16px;
+         line-height: 24px;
+         text-transform: capitalize;
+         margin-bottom: 0 !important;
+
+         &:nth-child(1) {
+            width: 20%;
+         }
+
+         &:nth-child(2) {
+            width: 15%;
+
+         }
+
+         &:nth-child(3) {
+            width: 15%;
+
+         }
+
+         &:nth-child(4) {
+            width: 15%;
+
+         }
+
+         &:nth-child(5) {
+            width: 15%;
+         }
+      }
+      .studentHash3 {
+         display: flex;
+         align-items: center;
+         padding: 16px;
+         text-align: start;
+         box-sizing: border-box;
+         font-style: normal;
+         font-weight: bold;
+         font-size: 16px;
+         line-height: 24px;
+         text-transform: capitalize;
+         color: #2F2D51;
+         margin-bottom: 0 !important;
+
+         a {
+            color: #2F2D51;
+         }
+
+         &:nth-child(1) {
+            width: 15%;
+         }
+
+         &:nth-child(2) {
+            width: 15%;
+
+         }
+
+         &:nth-child(3) {
+            width: 15%;
+
+         }
+
+         &:nth-child(4) {
+            width: 15%;
+
+         }
+
+         &:nth-child(5) {
+            width: 10%;
+
+         }
+         &:nth-child(6) {
+            width: 10%;
 
          }
       }
@@ -150,17 +330,12 @@
             }
             &:nth-child(5) {
                width: 15%;
-               
-            }
-            &:nth-child(6) {
-               width: 11%;
-
-            }
-            &:nth-child(7) {
-               width: 12%;
-
+               display: flex;
+               align-items: center;
+               justify-content: center;
             }
          }
+         
          
       }
    }
