--- a/src/components/TableBlock/TableBlock.scss
+++ b/src/components/TableBlock/TableBlock.scss
@@ -11,6 +11,58 @@
       background: #FAFAFA;
       transition: all ease 0.5s;
    }
+
+   .paymentHistory {
+         display: flex;
+         align-items: center;
+         padding: 16px;
+         text-align: start;
+         box-sizing: border-box;
+         font-style: normal;
+         font-weight: bold;
+         font-size: 16px;
+         line-height: 24px;
+         text-transform: capitalize;
+         color: #2F2D51;
+         margin-bottom: 0 !important;
+
+         a {
+            color: #2F2D51;
+         }
+
+         &:nth-child(1) {
+            width: 27%;
+         }
+
+         &:nth-child(2) {
+            width: 10%;
+
+         }
+
+         &:nth-child(3) {
+            width: 20%;
+
+         }
+
+         &:nth-child(4) {
+            width: 15%;
+
+         }
+
+         &:nth-child(5) {
+            width: 10%;
+
+         }
+
+         &:nth-child(6) {
+            width: 10%;
+
+         }
+         &:nth-child(7) {
+            width: 10%;
+
+         }
+      }
    
 
    .studentHash {
@@ -139,6 +191,56 @@
 
 
    }
+   .settingsHashRooms {
+      display: flex;
+      align-items: center;
+      padding: 16px;
+      text-align: start;
+      box-sizing: border-box;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 24px;
+      text-transform: capitalize;
+      color: #2F2D51;
+      margin-bottom: 0 !important;
+      flex-wrap: wrap;
+
+      a {
+         color: #2F2D51;
+      }
+
+      &:nth-child(1) {
+         width: 5%;
+      }
+
+      &:nth-child(2) {
+         width: 70%;
+
+      }
+
+      &:nth-child(3) {
+         width: 10%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         text-align: center;
+
+
+
+      }
+
+      &:nth-child(4) {
+         width: 10%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         text-align: center;
+      }
+
+
+
+   }
 
    .groupHash {
       display: flex;
@@ -171,21 +273,96 @@
 
       &:nth-child(4) {
          width: 10%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
 
       }
 
       &:nth-child(5) {
          width: 15%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+   }
+
+   .financeGroupHash {
+      display: flex;
+      align-items: center;
+      padding: 16px;
+      text-align: start;
+      box-sizing: border-box;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 24px;
+      text-transform: capitalize;
+      margin-bottom: 0 !important;
+
+      &:nth-child(1) {
+         width: 20%;
+      }
+
+      &:nth-child(2) {
+         width: 15%;
 
       }
 
-      &:nth-child(6) {
-         width: 11%;
+      &:nth-child(3) {
+         width: 15%;
 
       }
 
-      &:nth-child(7) {
-         width: 12%;
+      &:nth-child(4) {
+         width: 15%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+
+      }
+
+      &:nth-child(5) {
+         width: 15%;
+      }
+   }
+   
+   .financeCostHash {
+      display: flex;
+      align-items: center;
+      padding: 16px;
+      text-align: start;
+      box-sizing: border-box;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 24px;
+      text-transform: capitalize;
+      color: #2F2D51;
+      margin-bottom: 0 !important;
+      flex-wrap: wrap;
+
+      &:nth-child(1) {
+         width: 15%;
+      }
+
+      &:nth-child(2) {
+         width: 15%;
+
+      }
+
+      &:nth-child(3) {
+         width: 15%;
+
+      }
+
+      &:nth-child(4) {
+         width: 15%;
+
+      }
+
+      &:nth-child(5) {
+         width: 10%;
 
       }
    }
