--- a/src/containers/Forms/SettingsArchiveForm/SettingsArchiveForm.scss
+++ b/src/containers/Forms/SettingsArchiveForm/SettingsArchiveForm.scss
@@ -70,17 +70,14 @@
    font-family: "Jost";
    font-style: normal;
    font-weight: 600;
-   border: none;
-   font-size: 18px;
-   line-height: 29px;
+   font-size: .8rem;
    color: #FFFFFF;
-   margin-top: 40px;
-   margin-bottom: 35px;
-   padding: 12px 40px;
+   border: none;
    background: #090761;
    border-radius: 57px;
-   cursor: pointer;
-   margin-bottom: 35px;
+   padding: 12px 40px;
+   margin-bottom: 30px;
+   margin-top: 15px;
 }
 
 
