--- a/src/pages/Courses/containers/CoursesFormMainDegree/CoursesFormMainDegree.scss
+++ b/src/pages/Courses/containers/CoursesFormMainDegree/CoursesFormMainDegree.scss
@@ -39,14 +39,15 @@
 }
 
 .izma__lidlar__form-bolim-form-button {
+   font-family: "Jost";
    font-style: normal;
    font-weight: 600;
-   font-family: "Calibri";
-   font-size: 18px;
-   line-height: 22px;
+   font-size: .8rem;
+   color: #FFFFFF;
+   border: none;
    background: #090761;
    border-radius: 57px;
    padding: 12px 40px;
-   margin-top: 60px;
-   color: #FFFFFF;
+   margin-bottom: 30px;
+   margin-top: 15px; 
 }
