--- a/src/components/DropSearch/DropSearch.scss
+++ b/src/components/DropSearch/DropSearch.scss
@@ -1,6 +1,7 @@
 .dropSearch {
    position: relative;
-   border: 1px solid #EDF2F8;
+   border: 2px solid #C9D5E4;
+   background: #F7F9FB;
    width: 100%;
    border-radius: 5px;
 
@@ -70,7 +71,7 @@
       cursor: pointer;
       background-color: white;
           color: inherit;
-          font-size: inherit;
+          font-size: 10px;
           font-family: inherit;
           line-height: inherit;
           padding: 10px;
@@ -91,11 +92,11 @@
 
          &::before {
             content: "Selected";
+             font-size: 10px;
             position: absolute;
             padding: 0 10px;
             right: 0;
             text-align: center;
-            font-size: 13px;
             font-weight: bold;
 
          }
