--- a/src/containers/Forms/CoursesAdd/CoursesAdd.scss
+++ b/src/containers/Forms/CoursesAdd/CoursesAdd.scss
@@ -1,5 +1,6 @@
 .izma__form__teaxtarea .ant-input {
    min-height: 190px;
+   
 }
 
 .izma__lidlar__form-bolim-form-up {
@@ -18,7 +19,7 @@
    font-style: normal;
    font-weight: 600;
    font-family: "Calibri";
-   font-size: 28px;
+   font-size: 17px;
    line-height: 35px;
    color: #000000;
 }
@@ -36,17 +37,22 @@
 
 .izma__lidlar__form-bolim-form-center {
    margin-top: 30px;
+    input {
+       border: 2px solid #C9D5E4;
+       background: #F7F9FB;
+    }
 }
 
 .izma__lidlar__form-bolim-form-button {
+   font-family: "Jost";
    font-style: normal;
    font-weight: 600;
-   font-family: "Calibri";
-   font-size: 18px;
-   line-height: 22px;
+   font-size: .8rem;
+   color: #FFFFFF;
+   border: none;
    background: #090761;
    border-radius: 57px;
    padding: 12px 40px;
-   margin-top: 60px;
-   color: #FFFFFF;
+   margin-bottom: 30px;
+   margin-top: 15px;
 }
