--- a/src/pages/Courses/containers/CoursesFormMain/CoursesFormMain.scss
+++ b/src/pages/Courses/containers/CoursesFormMain/CoursesFormMain.scss
@@ -6,7 +6,7 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding-bottom: 25px;
+   padding-bottom: 24px;
    border-bottom: 1px solid #000000;
 }
 
@@ -18,14 +18,14 @@
    font-style: normal;
    font-weight: 600;
    font-family: "Calibri";
-   font-size: 28px;
-   line-height: 35px;
+   font-size: 17px;
    color: #000000;
+   margin-bottom: 0;
 }
 
 .izma__lidlar__form-bolim-form-img {
-   width: 25px;
-   height: 25px;
+   width: 20px;
+   height: 20px;
 }
 
 .izma__lidlar__form-bolim-form-close-btn {
@@ -39,14 +39,15 @@
 }
 
 .izma__lidlar__form-bolim-form-button {
+   font-family: "Jost";
    font-style: normal;
    font-weight: 600;
-   font-family: "Calibri";
-   font-size: 18px;
-   line-height: 22px;
+   font-size: .8rem;
+   color: #FFFFFF;
+   border: none;
    background: #090761;
    border-radius: 57px;
    padding: 12px 40px;
-   margin-top: 60px;
-   color: #FFFFFF;
+   margin-bottom: 30px;
+   margin-top: 15px;
 }
