--- a/src/pages/Home/containers/CoursesHome/CoursesHome.scss
+++ b/src/pages/Home/containers/CoursesHome/CoursesHome.scss
@@ -5,6 +5,23 @@
    &-left {
       width: 32%;
       margin-right: 40px;
+         min-height: 430px;
+         max-height: 430px;
+         overflow-y: scroll;
+         &::-webkit-scrollbar {
+            width: 10px;
+         }
+
+         &::-webkit-scrollbar-track {
+            background: #fff;
+         }
+
+         &::-webkit-scrollbar-thumb {
+            background: #090761;
+         }
+
+         
+
 
       h2 {
          margin-bottom: 20px;
@@ -23,6 +40,8 @@
       position: relative;
       overflow: hidden;
       padding-top: 16/9;
+      
+
 
       iframe {
          position: absolute;
