--- a/src/pages/Home/containers/RoomsTableWrapper/RoomsTableWrapper.scss
+++ b/src/pages/Home/containers/RoomsTableWrapper/RoomsTableWrapper.scss
@@ -183,4 +183,15 @@
 .table-main {
    height: 570px;
    overflow: scroll;
+   &::-webkit-scrollbar {
+      width: 10px;
+   }
+
+   &::-webkit-scrollbar-track {
+      background: #fff;
+   }
+
+   &::-webkit-scrollbar-thumb {
+      background: #090761;
+   }  
 }
