--- a/src/pages/Students/containers/StudentProfileLeft/StudentProfileLeft.scss
+++ b/src/pages/Students/containers/StudentProfileLeft/StudentProfileLeft.scss
@@ -5,7 +5,10 @@
 
 }
 
+
+
 .izma__students-payment-inner-left-wrapper {
+   width: 33%;
    &.active {
       &::before {
          position: fixed;
@@ -61,14 +64,19 @@
 .izma__students-payment-inner-left-up {
    position: relative;
    width: 350px;
-   margin-top: 150px;
-   padding-left: 35px;
+   margin-top: 95px;
+   position: sticky;
+   position: -webkit-sticky;
+   top: 50px;
    background: #FFFFFF;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.16);
    border-radius: 15px;
    margin-right: 45px;
 }
 
+.izma__students-payment-inner-left-centerizma__students-payment-inner-left-center {
+   padding-left: 35px;
+}
 
 
 
@@ -81,11 +89,17 @@
 
 .izma__students-payment-inner-left-up-left-name {
    font-style: normal;
-   font-weight: normal;
+   font-weight: bold;
    margin-top: 70px;
-   font-size: 22px;
-   line-height: 32px;
+   font-size: 15px;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
    color: #000000;
+   width: 100%;
+   text-align: center;
+   padding: 0 80px;
+
 }
 
 .izma__students-payment-inner-left-up-left-id {
@@ -267,7 +281,6 @@
 .izma__finance-payment-inner-left-up-box-black {
    position: absolute;
    top: -42.5px;
-   left: 158px;
    width: 85px;
    height: 85px;
    background: #C9C9C9;
@@ -277,8 +290,8 @@
 .izma__finance-payment-inner-left-up-box {
    position: absolute;
    right: 25px;
-   width: 40px;
-   height: 40px;
+   width: 35px;
+   height: 35px;
    border: none;
    outline: none;
    background-size: contain;
@@ -394,13 +407,13 @@
    display: flex;
    align-items: center;
    padding-left: 40px;
-   margin-top: 40px;
+   margin-top: 20px;
    padding-bottom: 25px;
 }
 
 .izma__finance-payment-inner-left-btn {
-   width: 40px;
-   height: 40px;
+   width: 35px;
+   height: 35px;
    border: none;
    outline: none;
    background-size: contain;
