--- a/src/pages/Settings_Pages/Roadmap/counter/counter.scss
+++ b/src/pages/Settings_Pages/Roadmap/counter/counter.scss
@@ -1,5 +1,6 @@
 .name_questions {
     width: 81.33%;
+    min-height: 300px;
     .questions_item {
         padding: 17px 109px 17px 28px;
         display: flex;
